test/expected/explain_ktnk.out
struct T; explain typename T x
                  ^
19: error: qualified name expected after "typename"
